before work paging, sorting and filter

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,6 +1,14 @@
-#Validation_Job====================================================================================
+#Validator_general============================================================================================================
+validator.dob-constraint=Requires users to be {min} years of age or older
+#Valid_Job=======================================================================================================
 job.valid.name=The name of job cannot blank
-#Account_success==========================================================================================================
+
+#Authentication_success==========================================================================================================
+auth.success.login=Login successful.
+#Authentication_error==============================================================================
+auth.error.login=Login failed.
+auth.error.login.not-existed-username=Username is not existed.
+auth.error.login.empty-username=Username cannot blank.
 
 #Account_error=============================================================================================================
 account.error.empty-list=The account list is empty.
