--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -13,6 +13,21 @@ auth.error.login.empty-username=Username cannot blank.
 #Account_error=============================================================================================================
 account.error.empty-list=The account list is empty.
 account.error.not-found=This account was not found.
+account.error.delete-temp=Delete temporarily account failed.
+account.error.delete-perm=Delete permanently account failed.
 #Account_success====================================================================================
 account.success.get-list=Get list acoount successful.
 acount.success.get-one=Get an account successful.
+account.success.delete-temp=Delete temporarily account successful.
+account.success.retrieve=Retrieve account successful.
+account.success.delete-perm=Delete permanently account successful.
+#Industry_success================================================================================
+industry.success.get-list=The list has {0} results.
+industry.success.get-detail=Get detail industry successful.
+industry.success.add-one=Add one industry successful.
+industry.success.update-one=Update one industry successful.
+#Industry_error==================================================================================
+industry.error.empty-list=List industry is empty.
+industry.error.not-found=Industry is not found.
+industry.error.existed=Industry is existed.
+industry.error.add-one=Add one industry is fail.
